final adjustments and configs
